--- a/example-web-jsf-portlet/pom.xml
+++ b/example-web-jsf-portlet/pom.xml
@@ -37,6 +37,17 @@
 			<artifactId>esup-commons2-jsf-portlet</artifactId>
 			<version>${esupcommons.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.esupportail</groupId>
+			<artifactId>example-web-jsf-shared</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>tomahawk20</artifactId>
+					<groupId>org.apache.myfaces.tomahawk</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 	</dependencies>
 	<properties>
 		<log.level>INFO</log.level>
