--- a/example-web-jsf-servlet/src/main/webapp/WEB-INF/web.xml
+++ b/example-web-jsf-servlet/src/main/webapp/WEB-INF/web.xml
@@ -93,7 +93,7 @@
 		<filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>
 		<init-param>
 			<param-name>casServerLoginUrl</param-name>
-			<param-value>https://sso-cas.univ-rennes1.fr/login</param-value>
+			<param-value>https://cas.uhp-nancy.fr/cas/login</param-value>
 		</init-param>
 		<init-param>
 			<param-name>serverName</param-name>
@@ -102,14 +102,15 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>CAS Authentication Filter</filter-name>
-		<url-pattern>/stylesheets/cas.xhtml</url-pattern>
+		<!-- <url-pattern>/stylesheets/cas.xhtml</url-pattern> -->
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<filter>
 		<filter-name>CAS Validation Filter</filter-name>
 		<filter-class>org.jasig.cas.client.validation.Cas10TicketValidationFilter</filter-class>
 		<init-param>
 			<param-name>casServerUrlPrefix</param-name>
-			<param-value>https://sso-cas.univ-rennes1.fr</param-value>
+			<param-value>https://cas.uhp-nancy.fr/cas</param-value>
 		</init-param>
 		<init-param>
 			<param-name>serverName</param-name>
@@ -118,7 +119,8 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>CAS Validation Filter</filter-name>
-		<url-pattern>/stylesheets/cas.xhtml</url-pattern>
+		<!-- <url-pattern>/stylesheets/cas.xhtml</url-pattern> -->
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
 	<!-- CXF -->
