--- a/esup-formation-web-jsf-servlet/src/main/webapp/WEB-INF/web.xml
+++ b/esup-formation-web-jsf-servlet/src/main/webapp/WEB-INF/web.xml
@@ -131,7 +131,7 @@
 
 <servlet-mapping>
   <servlet-name>CXFServlet</servlet-name>
-  <url-pattern>/*</url-pattern>
+  <url-pattern>/services/*</url-pattern>
 </servlet-mapping>
 
   <welcome-file-list>
